--- a/src/app.css
+++ b/src/app.css
@@ -1,28 +1,30 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import 'tailwindcss';
-@plugin "daisyui" { themes: nord --default; }
+@plugin "daisyui" {
+	themes: nord --default;
+}
 
 body {
-    font-family: "Space Grotesk";
-    font-size: 1.25rem;
+	font-family: 'Space Grotesk';
+	font-size: 1.25rem;
 }
 
 h1 {
-    font-size: 3rem;
-    font-weight: 700;
+	font-size: 3rem;
+	font-weight: 700;
 }
 
 h3 {
-    font-size: 2rem;
-    font-weight: 700;
+	font-size: 2rem;
+	font-weight: 700;
 }
 
 ul {
-    font-size: inherit;
+	font-size: inherit;
 }
 
 .column {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
