--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,23 @@ h3 {
 	font-weight: 700;
 }
 
+h4 {
+	font-size: 1.5rem;
+	font-weight: 700;
+}
+
+h5 {
+	font-size: 1.25rem;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
+h6 {
+	font-size: 1rem;
+	font-weight: 700;
+	text-transform: uppercase;
+}
+
 ul {
 	font-size: inherit;
 }
