--- a/src/app.css
+++ b/src/app.css
@@ -5,39 +5,51 @@
 }
 
 body {
+	--color-primary-content: var(--color-base-100);
+	--color-secondary-content: var(--color-base-100);
+	--color-accent-content: var(--color-base-100);
+	/* --color-info-content: var(--color-base-100); */
+	/* --color-success-content: var(--color-base-100); */
+	--color-error-content: var(--color-base-100);
+
 	font-family: 'Space Grotesk';
-	font-size: 1.25rem;
+	font-size: 1.125rem;
+}
+
+ul, input {
+	font-size: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+	font-weight: 700;
+}
+
+h5, h6 {
+	text-transform: uppercase;
 }
 
 h1 {
 	font-size: 3rem;
-	font-weight: 700;
+}
+
+h2 {
+	font-size: 2.25rem;
 }
 
 h3 {
-	font-size: 2rem;
-	font-weight: 700;
+	font-size: 1.75rem;
 }
 
 h4 {
 	font-size: 1.5rem;
-	font-weight: 700;
 }
 
 h5 {
-	font-size: 1.25rem;
-	font-weight: 700;
-	text-transform: uppercase;
+	font-size: 1.125rem;
 }
 
 h6 {
 	font-size: 1rem;
-	font-weight: 700;
-	text-transform: uppercase;
-}
-
-ul {
-	font-size: inherit;
 }
 
 .column {
