--- a/src/app.css
+++ b/src/app.css
@@ -14,15 +14,22 @@ body {
 	font-size: 1.125rem;
 }
 
-ul, input {
+ul,
+input {
 	font-size: inherit;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
 	font-weight: 700;
 }
 
-h5, h6 {
+h5,
+h6 {
 	text-transform: uppercase;
 }
 
