--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,6 @@ body {
 	--color-error-content: var(--color-base-100);
 
 	font-family: 'Space Grotesk';
-	font-size: 1.125rem;
 }
 
 ul,
@@ -34,19 +33,19 @@ h6 {
 }
 
 h1 {
-	font-size: 3rem;
+	font-size: 2.5rem;
 }
 
 h2 {
-	font-size: 2.25rem;
+	font-size: 2rem;
 }
 
 h3 {
-	font-size: 1.75rem;
+	font-size: 1.5rem;
 }
 
 h4 {
-	font-size: 1.5rem;
+	font-size: 1.25rem;
 }
 
 h5 {
@@ -61,4 +60,8 @@ h6 {
 	display: flex;
 	flex-direction: column;
 	height: 100%;
+}
+
+.btn {
+	font-size: inherit;
 }
